--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@
 title: SmallWorldBigDream
 description: > # this means to ignore newlines until "baseurl:"
   Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
-baseurl: "/Myblog"
+baseurl: "/matjek"
 url: "https://Etemem.github.io"
 permalink: /:year/:month/:day/:title
-repository: Etemem/Myblog
+repository: Etemem/matjek
 paginate: 5
 
 # MatJek specific configurations
